# fastapi-section

./: .template.env  .template.env.docker  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/versions/: 2025_08_03_0122-dbcc64678296_create_table_spimex_trading_results.py  2025_08_03_2039-425905903a3d_create_spimex_trading_result_table.py
app/api/api_v1/: __init__.py  schemas.py  trading.py
app/core/: settings.py
app/core/database/models/: __init__.py  spimex_trading_results.py
app/core/repositories/: cache_repository.py  db_repository.py
app/core/services/: excel_parser.py  http_parser.py  service.py
app/ioc/: init_container.py  sqlalchemy_providers.py
